patch: underline fixed using grid; working light theme; pinned profile top-left (removed from nav); first-run profile gate; per-profile histories; kids filter; voice search; spacing

--- a/site/food.html
+++ b/site/food.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="en"><head>
+<!doctype html><html lang="en"><head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>VibriNova — Digital Multiplex</title>
@@ -10,13 +9,12 @@
   <link rel="stylesheet" href="assets/style.css"/>
   <script defer src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <script defer src="assets/app.js"></script>
-</head>
-<body class="with-rail" data-page="food">
+</head><body class="with-rail" data-page="food">
 
 <header class="header">
   <div class="header-inner">
     <div class="brand">
-      <a href="profiles.html" class="only-mobile" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
+      <a href="profiles.html" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
       <img src="img/logo.svg" alt="logo"/>
       <div>
         <h1>VibriNova</h1>
@@ -24,48 +22,21 @@
       </div>
     </div>
     <div class="header-actions">
-      <a class="icon-btn only-mobile" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
+      <a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
     </div>
   </div>
 </header>
 <nav class="nav">
   <div class="nav-group top">
-    <a href="index.html" data-page="stream" title="Stream">
-      <div class="icon-wrap"><i data-lucide="clapperboard"></i><span class="underline"></span></div>
-      <span class="label">Stream</span>
-    </a>
-    <a href="food.html" data-page="food" title="Food">
-      <div class="icon-wrap"><i data-lucide="utensils-crossed"></i><span class="underline"></span></div>
-      <span class="label">Food</span>
-    </a>
-    <a href="chat.html" data-page="chat" title="Chat">
-      <div class="icon-wrap"><i data-lucide="message-square"></i><span class="underline"></span></div>
-      <span class="label">Chat</span>
-    </a>
-    <a href="tickets.html" data-page="tickets" title="Tickets">
-      <div class="icon-wrap"><i data-lucide="ticket"></i><span class="underline"></span></div>
-      <span class="label">Tickets</span>
-    </a>
-    <a href="playzone.html" data-page="playzone" title="Play">
-      <div class="icon-wrap"><i data-lucide="gamepad-2"></i><span class="underline"></span></div>
-      <span class="label">Play</span>
-    </a>
-  </div>
-  <div class="nav-group mid">
-    <a href="profiles.html" data-page="profiles" title="Profiles">
-      <div class="icon-wrap"><i data-lucide="users-round"></i><span class="underline"></span></div>
-      <span class="label">Profiles</span>
-    </a>
+    <a href="index.html" data-page="stream" title="Stream"><div class="icon-wrap"><i data-lucide="clapperboard"></i></div><span class="label">Stream</span><span class="underline"></span></a>
+    <a href="food.html" data-page="food" title="Food"><div class="icon-wrap"><i data-lucide="utensils-crossed"></i></div><span class="label">Food</span><span class="underline"></span></a>
+    <a href="chat.html" data-page="chat" title="Chat"><div class="icon-wrap"><i data-lucide="message-square"></i></div><span class="label">Chat</span><span class="underline"></span></a>
+    <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
+    <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
   </div>
   <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts">
-      <div class="icon-wrap"><i data-lucide="bell"></i><span class="underline"></span></div>
-      <span class="label">Alerts</span>
-    </a>
-    <a href="settings.html" data-page="settings" title="Settings">
-      <div class="icon-wrap"><i data-lucide="settings"></i><span class="underline"></span></div>
-      <span class="label">Settings</span>
-    </a>
+    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts"><div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span></a>
+    <a href="settings.html" data-page="settings" title="Settings"><div class="icon-wrap"><i data-lucide="settings"></i></div><span class="label">Settings</span><span class="underline"></span></a>
   </div>
 </nav>
 
@@ -84,42 +55,70 @@
 
   <h3 class="section-title">Popular Restaurants</h3>
   <div class="grid auto">
-    <div class='poster card'><img src='https://picsum.photos/seed/food1/900/600' alt=''>
-      <div class='p'><div class='title'>Place 1</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food2/900/600' alt=''>
-      <div class='p'><div class='title'>Place 2</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food3/900/600' alt=''>
-      <div class='p'><div class='title'>Place 3</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food4/900/600' alt=''>
-      <div class='p'><div class='title'>Place 4</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food5/900/600' alt=''>
-      <div class='p'><div class='title'>Place 5</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food6/900/600' alt=''>
-      <div class='p'><div class='title'>Place 6</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food7/900/600' alt=''>
-      <div class='p'><div class='title'>Place 7</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food8/900/600' alt=''>
-      <div class='p'><div class='title'>Place 8</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food9/900/600' alt=''>
-      <div class='p'><div class='title'>Place 9</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food10/900/600' alt=''>
-      <div class='p'><div class='title'>Place 10</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food11/900/600' alt=''>
-      <div class='p'><div class='title'>Place 11</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/food12/900/600' alt=''>
-      <div class='p'><div class='title'>Place 12</div><div class='text-muted' style='font-size:12px'>Fast Food • 30-40 min</div>
-      <div class='mt-2'><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div></div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food1/900/600" alt="">
+      <div class="p"><div class="title">Place 1</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food2/900/600" alt="">
+      <div class="p"><div class="title">Place 2</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food3/900/600" alt="">
+      <div class="p"><div class="title">Place 3</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food4/900/600" alt="">
+      <div class="p"><div class="title">Place 4</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food5/900/600" alt="">
+      <div class="p"><div class="title">Place 5</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food6/900/600" alt="">
+      <div class="p"><div class="title">Place 6</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food7/900/600" alt="">
+      <div class="p"><div class="title">Place 7</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food8/900/600" alt="">
+      <div class="p"><div class="title">Place 8</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food9/900/600" alt="">
+      <div class="p"><div class="title">Place 9</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food10/900/600" alt="">
+      <div class="p"><div class="title">Place 10</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food11/900/600" alt="">
+      <div class="p"><div class="title">Place 11</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food12/900/600" alt="">
+      <div class="p"><div class="title">Place 12</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food13/900/600" alt="">
+      <div class="p"><div class="title">Place 13</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food14/900/600" alt="">
+      <div class="p"><div class="title">Place 14</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food15/900/600" alt="">
+      <div class="p"><div class="title">Place 15</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/food16/900/600" alt="">
+      <div class="p"><div class="title">Place 16</div><div class="text-muted" style="font-size:12px">Fast Food • 30-40 min</div>
+      <div class="mt-2"><button class="btn">View Menu</button> <button class="btn-primary btn">Order</button></div></div>
+    </div>
   </div>
 </main>
 </body></html>
