--- a/site/notifications.html
+++ b/site/notifications.html
@@ -16,7 +16,7 @@
 <header class="header">
   <div class="header-inner">
     <div class="brand">
-      <a href="profiles.html" class="only-mobile" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
+      <a href="profiles.html" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
       <img src="img/logo.svg" alt="logo"/>
       <div>
         <h1>VibriNova</h1>
@@ -24,55 +24,26 @@
       </div>
     </div>
     <div class="header-actions">
-      <a class="icon-btn only-mobile" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
+      <a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
     </div>
   </div>
 </header>
 <nav class="nav">
   <div class="nav-group top">
-    <a href="index.html" data-page="stream" title="Stream">
-      <div class="icon-wrap"><i data-lucide="clapperboard"></i><span class="underline"></span></div>
-      <span class="label">Stream</span>
-    </a>
-    <a href="food.html" data-page="food" title="Food">
-      <div class="icon-wrap"><i data-lucide="utensils-crossed"></i><span class="underline"></span></div>
-      <span class="label">Food</span>
-    </a>
-    <a href="chat.html" data-page="chat" title="Chat">
-      <div class="icon-wrap"><i data-lucide="message-square"></i><span class="underline"></span></div>
-      <span class="label">Chat</span>
-    </a>
-    <a href="tickets.html" data-page="tickets" title="Tickets">
-      <div class="icon-wrap"><i data-lucide="ticket"></i><span class="underline"></span></div>
-      <span class="label">Tickets</span>
-    </a>
-    <a href="playzone.html" data-page="playzone" title="Play">
-      <div class="icon-wrap"><i data-lucide="gamepad-2"></i><span class="underline"></span></div>
-      <span class="label">Play</span>
-    </a>
-  </div>
-  <div class="nav-group mid">
-    <a href="profiles.html" data-page="profiles" title="Profiles">
-      <div class="icon-wrap"><i data-lucide="users-round"></i><span class="underline"></span></div>
-      <span class="label">Profiles</span>
-    </a>
+    <a href="index.html" data-page="stream" title="Stream"><div class="icon-wrap"><i data-lucide="clapperboard"></i></div><span class="label">Stream</span><span class="underline"></span></a>
+    <a href="food.html" data-page="food" title="Food"><div class="icon-wrap"><i data-lucide="utensils-crossed"></i></div><span class="label">Food</span><span class="underline"></span></a>
+    <a href="chat.html" data-page="chat" title="Chat"><div class="icon-wrap"><i data-lucide="message-square"></i></div><span class="label">Chat</span><span class="underline"></span></a>
+    <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
+    <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
   </div>
   <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts">
-      <div class="icon-wrap"><i data-lucide="bell"></i><span class="underline"></span></div>
-      <span class="label">Alerts</span>
-    </a>
-    <a href="settings.html" data-page="settings" title="Settings">
-      <div class="icon-wrap"><i data-lucide="settings"></i><span class="underline"></span></div>
-      <span class="label">Settings</span>
-    </a>
+    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts"><div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span></a>
+    <a href="settings.html" data-page="settings" title="Settings"><div class="icon-wrap"><i data-lucide="settings"></i></div><span class="label">Settings</span><span class="underline"></span></a>
   </div>
 </nav>
 
 <main class="container">
   <div class="row"><h2>Notifications</h2></div>
-  <section class="card section">
-    <p class="text-muted">No new notifications.</p>
-  </section>
+  <section class="card section"><p class="text-muted">No new notifications.</p></section>
 </main>
 </body></html>
