--- a/site/playzone.html
+++ b/site/playzone.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="en"><head>
+<!doctype html><html lang="en"><head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>VibriNova — Digital Multiplex</title>
@@ -10,13 +9,12 @@
   <link rel="stylesheet" href="assets/style.css"/>
   <script defer src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <script defer src="assets/app.js"></script>
-</head>
-<body class="with-rail" data-page="playzone">
+</head><body class="with-rail" data-page="playzone">
 
 <header class="header">
   <div class="header-inner">
     <div class="brand">
-      <a href="profiles.html" class="only-mobile" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
+      <a href="profiles.html" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
       <img src="img/logo.svg" alt="logo"/>
       <div>
         <h1>VibriNova</h1>
@@ -24,48 +22,21 @@
       </div>
     </div>
     <div class="header-actions">
-      <a class="icon-btn only-mobile" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
+      <a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
     </div>
   </div>
 </header>
 <nav class="nav">
   <div class="nav-group top">
-    <a href="index.html" data-page="stream" title="Stream">
-      <div class="icon-wrap"><i data-lucide="clapperboard"></i><span class="underline"></span></div>
-      <span class="label">Stream</span>
-    </a>
-    <a href="food.html" data-page="food" title="Food">
-      <div class="icon-wrap"><i data-lucide="utensils-crossed"></i><span class="underline"></span></div>
-      <span class="label">Food</span>
-    </a>
-    <a href="chat.html" data-page="chat" title="Chat">
-      <div class="icon-wrap"><i data-lucide="message-square"></i><span class="underline"></span></div>
-      <span class="label">Chat</span>
-    </a>
-    <a href="tickets.html" data-page="tickets" title="Tickets">
-      <div class="icon-wrap"><i data-lucide="ticket"></i><span class="underline"></span></div>
-      <span class="label">Tickets</span>
-    </a>
-    <a href="playzone.html" data-page="playzone" title="Play">
-      <div class="icon-wrap"><i data-lucide="gamepad-2"></i><span class="underline"></span></div>
-      <span class="label">Play</span>
-    </a>
-  </div>
-  <div class="nav-group mid">
-    <a href="profiles.html" data-page="profiles" title="Profiles">
-      <div class="icon-wrap"><i data-lucide="users-round"></i><span class="underline"></span></div>
-      <span class="label">Profiles</span>
-    </a>
+    <a href="index.html" data-page="stream" title="Stream"><div class="icon-wrap"><i data-lucide="clapperboard"></i></div><span class="label">Stream</span><span class="underline"></span></a>
+    <a href="food.html" data-page="food" title="Food"><div class="icon-wrap"><i data-lucide="utensils-crossed"></i></div><span class="label">Food</span><span class="underline"></span></a>
+    <a href="chat.html" data-page="chat" title="Chat"><div class="icon-wrap"><i data-lucide="message-square"></i></div><span class="label">Chat</span><span class="underline"></span></a>
+    <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
+    <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
   </div>
   <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts">
-      <div class="icon-wrap"><i data-lucide="bell"></i><span class="underline"></span></div>
-      <span class="label">Alerts</span>
-    </a>
-    <a href="settings.html" data-page="settings" title="Settings">
-      <div class="icon-wrap"><i data-lucide="settings"></i><span class="underline"></span></div>
-      <span class="label">Settings</span>
-    </a>
+    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts"><div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span></a>
+    <a href="settings.html" data-page="settings" title="Settings"><div class="icon-wrap"><i data-lucide="settings"></i></div><span class="label">Settings</span><span class="underline"></span></a>
   </div>
 </nav>
 
@@ -84,42 +55,70 @@
 
   <h3 class="section-title">Mini Games</h3>
   <div class="grid auto">
-    <div class='poster card'><img src='https://picsum.photos/seed/game1/900/600' alt=''>
-      <div class='p'><div class='title'>Game 1</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game2/900/600' alt=''>
-      <div class='p'><div class='title'>Game 2</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game3/900/600' alt=''>
-      <div class='p'><div class='title'>Game 3</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game4/900/600' alt=''>
-      <div class='p'><div class='title'>Game 4</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game5/900/600' alt=''>
-      <div class='p'><div class='title'>Game 5</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game6/900/600' alt=''>
-      <div class='p'><div class='title'>Game 6</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game7/900/600' alt=''>
-      <div class='p'><div class='title'>Game 7</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game8/900/600' alt=''>
-      <div class='p'><div class='title'>Game 8</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game9/900/600' alt=''>
-      <div class='p'><div class='title'>Game 9</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game10/900/600' alt=''>
-      <div class='p'><div class='title'>Game 10</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game11/900/600' alt=''>
-      <div class='p'><div class='title'>Game 11</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/game12/900/600' alt=''>
-      <div class='p'><div class='title'>Game 12</div><div class='text-muted' style='font-size:12px'>1–4 Players</div>
-      <div class='mt-2'><button class="btn">Play</button></div></div></div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game1/900/600" alt="">
+      <div class="p"><div class="title">Game 1</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game2/900/600" alt="">
+      <div class="p"><div class="title">Game 2</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game3/900/600" alt="">
+      <div class="p"><div class="title">Game 3</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game4/900/600" alt="">
+      <div class="p"><div class="title">Game 4</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game5/900/600" alt="">
+      <div class="p"><div class="title">Game 5</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game6/900/600" alt="">
+      <div class="p"><div class="title">Game 6</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game7/900/600" alt="">
+      <div class="p"><div class="title">Game 7</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game8/900/600" alt="">
+      <div class="p"><div class="title">Game 8</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game9/900/600" alt="">
+      <div class="p"><div class="title">Game 9</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game10/900/600" alt="">
+      <div class="p"><div class="title">Game 10</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game11/900/600" alt="">
+      <div class="p"><div class="title">Game 11</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game12/900/600" alt="">
+      <div class="p"><div class="title">Game 12</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game13/900/600" alt="">
+      <div class="p"><div class="title">Game 13</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game14/900/600" alt="">
+      <div class="p"><div class="title">Game 14</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game15/900/600" alt="">
+      <div class="p"><div class="title">Game 15</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
+    <div class="poster card"><img src="https://picsum.photos/seed/game16/900/600" alt="">
+      <div class="p"><div class="title">Game 16</div><div class="text-muted" style="font-size:12px">1–4 Players</div>
+      <div class="mt-2"><button class="btn">Play</button></div></div>
+    </div>
   </div>
 </main>
 </body></html>
