--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="en"><head>
+<!doctype html><html lang="en"><head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>VibriNova — Digital Multiplex</title>
@@ -10,13 +9,12 @@
   <link rel="stylesheet" href="assets/style.css"/>
   <script defer src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <script defer src="assets/app.js"></script>
-</head>
-<body class="with-rail" data-page="stream">
+</head><body class="with-rail" data-page="stream">
 
 <header class="header">
   <div class="header-inner">
     <div class="brand">
-      <a href="profiles.html" class="only-mobile" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
+      <a href="profiles.html" title="Profiles"><span id="mobile-avatar" class="avatar-tiny">P</span></a>
       <img src="img/logo.svg" alt="logo"/>
       <div>
         <h1>VibriNova</h1>
@@ -24,48 +22,21 @@
       </div>
     </div>
     <div class="header-actions">
-      <a class="icon-btn only-mobile" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
+      <a class="icon-btn" href="notifications.html" title="Alerts"><i data-lucide="bell"></i></a>
     </div>
   </div>
 </header>
 <nav class="nav">
   <div class="nav-group top">
-    <a href="index.html" data-page="stream" title="Stream">
-      <div class="icon-wrap"><i data-lucide="clapperboard"></i><span class="underline"></span></div>
-      <span class="label">Stream</span>
-    </a>
-    <a href="food.html" data-page="food" title="Food">
-      <div class="icon-wrap"><i data-lucide="utensils-crossed"></i><span class="underline"></span></div>
-      <span class="label">Food</span>
-    </a>
-    <a href="chat.html" data-page="chat" title="Chat">
-      <div class="icon-wrap"><i data-lucide="message-square"></i><span class="underline"></span></div>
-      <span class="label">Chat</span>
-    </a>
-    <a href="tickets.html" data-page="tickets" title="Tickets">
-      <div class="icon-wrap"><i data-lucide="ticket"></i><span class="underline"></span></div>
-      <span class="label">Tickets</span>
-    </a>
-    <a href="playzone.html" data-page="playzone" title="Play">
-      <div class="icon-wrap"><i data-lucide="gamepad-2"></i><span class="underline"></span></div>
-      <span class="label">Play</span>
-    </a>
-  </div>
-  <div class="nav-group mid">
-    <a href="profiles.html" data-page="profiles" title="Profiles">
-      <div class="icon-wrap"><i data-lucide="users-round"></i><span class="underline"></span></div>
-      <span class="label">Profiles</span>
-    </a>
+    <a href="index.html" data-page="stream" title="Stream"><div class="icon-wrap"><i data-lucide="clapperboard"></i></div><span class="label">Stream</span><span class="underline"></span></a>
+    <a href="food.html" data-page="food" title="Food"><div class="icon-wrap"><i data-lucide="utensils-crossed"></i></div><span class="label">Food</span><span class="underline"></span></a>
+    <a href="chat.html" data-page="chat" title="Chat"><div class="icon-wrap"><i data-lucide="message-square"></i></div><span class="label">Chat</span><span class="underline"></span></a>
+    <a href="tickets.html" data-page="tickets" title="Tickets"><div class="icon-wrap"><i data-lucide="ticket"></i></div><span class="label">Tickets</span><span class="underline"></span></a>
+    <a href="playzone.html" data-page="playzone" title="Play"><div class="icon-wrap"><i data-lucide="gamepad-2"></i></div><span class="label">Play</span><span class="underline"></span></a>
   </div>
   <div class="nav-group end">
-    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts">
-      <div class="icon-wrap"><i data-lucide="bell"></i><span class="underline"></span></div>
-      <span class="label">Alerts</span>
-    </a>
-    <a href="settings.html" data-page="settings" title="Settings">
-      <div class="icon-wrap"><i data-lucide="settings"></i><span class="underline"></span></div>
-      <span class="label">Settings</span>
-    </a>
+    <a href="notifications.html" data-page="notifications" class="only-desktop" title="Alerts"><div class="icon-wrap"><i data-lucide="bell"></i></div><span class="label">Alerts</span><span class="underline"></span></a>
+    <a href="settings.html" data-page="settings" title="Settings"><div class="icon-wrap"><i data-lucide="settings"></i></div><span class="label">Settings</span><span class="underline"></span></a>
   </div>
 </nav>
 
@@ -92,60 +63,166 @@
 
   <h3 class="section-title">Trending Now</h3>
   <div class="grid auto">
-    <div class='poster card'><img src='https://picsum.photos/seed/tr1/800/600' alt=''>
-      <div class='p'><div class='title'>Title 1</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 1">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr2/800/600' alt=''>
-      <div class='p'><div class='title'>Title 2</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 2">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr3/800/600' alt=''>
-      <div class='p'><div class='title'>Title 3</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 3">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr4/800/600' alt=''>
-      <div class='p'><div class='title'>Title 4</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 4">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr5/800/600' alt=''>
-      <div class='p'><div class='title'>Title 5</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 5">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr6/800/600' alt=''>
-      <div class='p'><div class='title'>Title 6</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 6">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr7/800/600' alt=''>
-      <div class='p'><div class='title'>Title 7</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 7">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr8/800/600' alt=''>
-      <div class='p'><div class='title'>Title 8</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 8">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr9/800/600' alt=''>
-      <div class='p'><div class='title'>Title 9</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 9">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr10/800/600' alt=''>
-      <div class='p'><div class='title'>Title 10</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 10">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr11/800/600' alt=''>
-      <div class='p'><div class='title'>Title 11</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 11">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr12/800/600' alt=''>
-      <div class='p'><div class='title'>Title 12</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 12">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr13/800/600' alt=''>
-      <div class='p'><div class='title'>Title 13</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 13">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr14/800/600' alt=''>
-      <div class='p'><div class='title'>Title 14</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 14">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr15/800/600' alt=''>
-      <div class='p'><div class='title'>Title 15</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 15">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr16/800/600' alt=''>
-      <div class='p'><div class='title'>Title 16</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 16">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr17/800/600' alt=''>
-      <div class='p'><div class='title'>Title 17</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 17">Play</button> <button class="btn">Add</button></div></div></div>
-<div class='poster card'><img src='https://picsum.photos/seed/tr18/800/600' alt=''>
-      <div class='p'><div class='title'>Title 18</div><div class='text-muted' style='font-size:12px'>Action • 2024</div>
-      <div class='mt-2'><button class="btn watch-btn" data-title="Title 18">Play</button> <button class="btn">Add</button></div></div></div>
+    <div class="poster card" data-age="7+">
+      <img src="https://picsum.photos/seed/tr1/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 1</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 7+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 1">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="13+">
+      <img src="https://picsum.photos/seed/tr2/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 2</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 13+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 2">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="18+">
+      <img src="https://picsum.photos/seed/tr3/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 3</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 18+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 3">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="U">
+      <img src="https://picsum.photos/seed/tr4/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 4</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • U</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 4">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="7+">
+      <img src="https://picsum.photos/seed/tr5/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 5</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 7+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 5">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="13+">
+      <img src="https://picsum.photos/seed/tr6/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 6</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 13+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 6">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="18+">
+      <img src="https://picsum.photos/seed/tr7/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 7</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 18+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 7">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="U">
+      <img src="https://picsum.photos/seed/tr8/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 8</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • U</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 8">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="7+">
+      <img src="https://picsum.photos/seed/tr9/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 9</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 7+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 9">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="13+">
+      <img src="https://picsum.photos/seed/tr10/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 10</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 13+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 10">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="18+">
+      <img src="https://picsum.photos/seed/tr11/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 11</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 18+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 11">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="U">
+      <img src="https://picsum.photos/seed/tr12/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 12</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • U</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 12">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="7+">
+      <img src="https://picsum.photos/seed/tr13/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 13</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 7+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 13">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="13+">
+      <img src="https://picsum.photos/seed/tr14/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 14</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 13+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 14">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="18+">
+      <img src="https://picsum.photos/seed/tr15/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 15</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 18+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 15">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="U">
+      <img src="https://picsum.photos/seed/tr16/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 16</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • U</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 16">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="7+">
+      <img src="https://picsum.photos/seed/tr17/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 17</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 7+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 17">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="13+">
+      <img src="https://picsum.photos/seed/tr18/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 18</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 13+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 18">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="18+">
+      <img src="https://picsum.photos/seed/tr19/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 19</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • 18+</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 19">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
+    <div class="poster card" data-age="U">
+      <img src="https://picsum.photos/seed/tr20/800/600" alt="">
+      <div class="p">
+        <div class="title">Title 20</div>
+        <div class="text-muted" style="font-size:12px">Action • 2024 • U</div>
+        <div class="mt-2"><button class="btn watch-btn" data-title="Title 20">Play</button> <button class="btn">Add</button></div>
+      </div>
+    </div>
   </div>
 </main>
 </body></html>
